force-app/main/default/objects/FinServ__Employment__c/fields/FinServ__Contact__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employment</relationshipLabel>
    <relationshipName>Employment</relationshipName>
    <type>Lookup</type>
</CustomField>