force-app/main/default/objects/FinServ__Employment__c/fields/FinServ__EmployerPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>FinServ__EmployerPhoneNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer Phone Number</label>
    <type>Phone</type>
</CustomField>