force-app/main/default/objects/FinServ__Employment__c/fields/FinServ__Occupation__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Occupation__c</fullName>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Computer and Mathematical</fullName>
            </value>
            <value>
                <fullName>Architecture and Engineering</fullName>
            </value>
            <value>
                <fullName>Life, Physical, and Social Science</fullName>
            </value>
            <value>
                <fullName>Community and Social Service</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Education, Training, and Library</fullName>
            </value>
            <value>
                <fullName>Arts, Design, Entertainment, Sports, and Media</fullName>
            </value>
            <value>
                <fullName>Healthcare Practitioners and Technical</fullName>
            </value>
            <value>
                <fullName>Healthcare Support</fullName>
            </value>
            <value>
                <fullName>Protective Service</fullName>
            </value>
            <value>
                <fullName>Food Preparation and Serving</fullName>
            </value>
            <value>
                <fullName>Building and Grounds Cleaning/Maintennce</fullName>
            </value>
            <value>
                <fullName>Personal Care and Service</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Office Admin</fullName>
            </value>
            <value>
                <fullName>Farming, Fishing, and Forestry</fullName>
            </value>
            <value>
                <fullName>Construction and Extraction</fullName>
            </value>
            <value>
                <fullName>Installation, Maintenance, and Repair</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Transportation and Material Moving</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>