force-app/main/default/objects/FinServ__Employment__c/fields/FinServ__StartDate__c.field-meta.xml
<CustomField>
    <fullName>FinServ__StartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>