force-app/main/default/objects/FinServ__Employment__c/validationRules/FinServ__StartDateCannotBeInFuture.validationRule-meta.xml
<ValidationRule>
    <fullName>FinServ__StartDateCannotBeInFuture</fullName>
    <active>true</active>
    <description>Error message when the employment start date is in the future.</description>
    <errorConditionFormula>FinServ__StartDate__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>The start date can&apos;t be in the future.</errorMessage>
</ValidationRule>