force-app/main/default/objects/FinServ__Employment__c/validationRules/FinServ__StartDateCannotBeLaterThanEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>FinServ__StartDateCannotBeLaterThanEndDate</fullName>
    <active>true</active>
    <description>Error message when the employment start date is later than the end date.</description>
    <errorConditionFormula>FinServ__StartDate__c &gt; FinServ__EndDate__c</errorConditionFormula>
    <errorMessage>The start date can&apos;t be later than the end date.</errorMessage>
</ValidationRule>